--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -40,6 +40,7 @@
     "item.mrqx_extra_pack.compressed_biscuit": "压缩饼干",
     "item.mrqx_extra_pack.core_of_knights": "骑士核心",
     "item.mrqx_extra_pack.cpu": "处理器",
+    "item.mrqx_extra_pack.craftsmanship_core": "§6工匠奥秘·匠艺核心§r",
     "item.mrqx_extra_pack.crispy_belly": "脆肚",
     "item.mrqx_extra_pack.dark_sun_seed": "暗日种子",
     "item.mrqx_extra_pack.divine_pen": "神之笔",
@@ -262,10 +263,33 @@
     "mrqx_extra_pack.mrqx_god_judgement": "神之惩戒",
     "mrqx_extra_pack.mrqx_mechanical_frenzy": "机械狂潮",
     "mrqx_extra_pack.mrqx_shadow_of_caerula_arbor": "深蓝之树之影",
-    "mrqx_extra_pack.msg.divine_pen.1": "副手须持握铁魔法的墨水！",
-    "mrqx_extra_pack.msg.divine_pen.2": "胸腔中存在§f纸§r器官！",
-    "mrqx_extra_pack.msg.fission_reactor.1": "核反应燃料不足！",
-    "mrqx_extra_pack.msg.fission_reactor.2": "核反应已在进行！",
+    "mrqx_extra_pack.msg.divine_pen.1": "§7副手须持握铁魔法的墨水！§r",
+    "mrqx_extra_pack.msg.divine_pen.2": "§7胸腔中存在§f纸§7器官！§r",
+    "mrqx_extra_pack.msg.fission_reactor.1": "§7核反应燃料不足！§r",
+    "mrqx_extra_pack.msg.fission_reactor.2": "§7核反应已在进行！§r",
+    "mrqx_extra_pack.msg.xiao_amburm.0": "〈XiaoTin·Amburm〉：%s",
+    "mrqx_extra_pack.msg.xiao_amburm.1": "今天天气怎么样？让咱出来看看！",
+    "mrqx_extra_pack.msg.xiao_amburm.10": "肌腱大餐……",
+    "mrqx_extra_pack.msg.xiao_amburm.11": "你的锻造锤因为你的镐子喜欢上了你的铲子就不工作了？？？",
+    "mrqx_extra_pack.msg.xiao_amburm.12": "附近有猫猫吗？",
+    "mrqx_extra_pack.msg.xiao_amburm.13": "晚上吃什么？炭烧村民？",
+    "mrqx_extra_pack.msg.xiao_amburm.14": "晚上吃什么？炭烧昔灵？哒咩咯！",
+    "mrqx_extra_pack.msg.xiao_amburm.15": "不要齿窝！",
+    "mrqx_extra_pack.msg.xiao_amburm.16": "*施展神秘的转运仪式",
+    "mrqx_extra_pack.msg.xiao_amburm.17": "D100=1！大成功！",
+    "mrqx_extra_pack.msg.xiao_amburm.18": "D100=100？救主泥…",
+    "mrqx_extra_pack.msg.xiao_amburm.19": "86个水车还是应力过载吗……",
+    "mrqx_extra_pack.msg.xiao_amburm.2": "你把销塞到背包太里面了！咱喘不上气了！",
+    "mrqx_extra_pack.msg.xiao_amburm.20": "太阳出来吗？让咱出来看看！",
+    "mrqx_extra_pack.msg.xiao_amburm.21": "*正在偷偷从你的钻石工具上扣下来钻石……",
+    "mrqx_extra_pack.msg.xiao_amburm.22": "偷偷把你的开胸器换成剪刀",
+    "mrqx_extra_pack.msg.xiao_amburm.3": "你的工具们好像在哀鸣……它们没事吗？",
+    "mrqx_extra_pack.msg.xiao_amburm.4": "有点饿……你有吃的吗？",
+    "mrqx_extra_pack.msg.xiao_amburm.5": "你好香啊……",
+    "mrqx_extra_pack.msg.xiao_amburm.6": "今天还是大雨吗？",
+    "mrqx_extra_pack.msg.xiao_amburm.7": "有——人——吗——",
+    "mrqx_extra_pack.msg.xiao_amburm.8": "*模仿苦力怕的声音\n嘶嘶～",
+    "mrqx_extra_pack.msg.xiao_amburm.9": "你喜欢用什么飞行？魔女扫把永远第一！",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.00": "未持有",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.01": "等级：%s",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.02": "剩余时长：%ss",
@@ -389,6 +413,7 @@
     "mrqx_extra_pack.tooltips.automatic_wax_protector.1": "防水性能++",
     "mrqx_extra_pack.tooltips.automatic_wax_protector.2": "激活后，根据胸腔中的§e蜜脾§r数量提供对书写过的§f纸§r器官的防护",
     "mrqx_extra_pack.tooltips.automatic_wax_protector.3": "§e蜜脾§r数量达到64时，书写过的§f纸§r器官将得到对水的完全防护；达到256时，书写过的§f纸§r器官将得到对火的完全防护；达到1024时，书写过的§f纸§r器官将得到对岩浆的完全防护",
+    "mrqx_extra_pack.tooltips.automatic_wax_protector.4": "体温较高时在雨中、水中数值更不容易减少，体温较低时在燃烧状态、火中、岩浆中数值更不容易减少",
     "mrqx_extra_pack.tooltips.basic_uncoded_cpu.1": "只有一本简易的说明书",
     "mrqx_extra_pack.tooltips.black_hole.1": "吞噬万物",
     "mrqx_extra_pack.tooltips.black_hole.2": "按下主动技能按键，持续吸引周围生物，§6天体§r器官数提供力度和范围",
@@ -428,6 +453,9 @@
     "mrqx_extra_pack.tooltips.core_of_knights.2": "激活后，胸腔中每有一个§e国王§r器官，自身攻击伤害、最大生命值、盔甲值+10%，并触发一次部分§3骑士§r器官的§3强化§r效果",
     "mrqx_extra_pack.tooltips.cpu.1": "“检测到无效指令，正在使用默认指令：通用计算”",
     "mrqx_extra_pack.tooltips.cpu.2": "每有一个§e处理器§r器官，§7算力§r+1",
+    "mrqx_extra_pack.tooltips.craftsmanship_core.1": "这个世界过去失传的无数工艺凝结于此……你知道这意味着什么",
+    "mrqx_extra_pack.tooltips.craftsmanship_core.2": "§e极致技艺：置于背包时，解锁数个Tetra额外升级项目（每个工具只能升级一种，无完整度消耗）§r",
+    "mrqx_extra_pack.tooltips.craftsmanship_core.3": "§e万能工具：置于背包时，为Tetra改造提供99级全工具等级§r",
     "mrqx_extra_pack.tooltips.crispy_belly.1": "脆肚好吃",
     "mrqx_extra_pack.tooltips.crispy_belly.2": "……翠杜？",
     "mrqx_extra_pack.tooltips.dark_sun_seed.1": "暗无天日",
@@ -955,6 +983,10 @@
     "tetra.module.crossbow/mrqx_thermal_injector.item_name": "反应热喷口",
     "tetra.module.crossbow/mrqx_thermal_injector.material_name": "反应热喷口",
     "tetra.module.crossbow/mrqx_thermal_injector.name": "反应热喷口",
+    "tetra.module.holo/craftsmanship_core.description": "§6工匠奥秘·匠艺核心§r能够提供极高的工具等级",
+    "tetra.module.holo/craftsmanship_core.item_name": "§6工匠奥秘·匠艺核心§r",
+    "tetra.module.holo/craftsmanship_core.material_name": "§6工匠奥秘·匠艺核心§r",
+    "tetra.module.holo/craftsmanship_core.name": "§6工匠奥秘·匠艺核心§r",
     "tetra.module.shield/mrqx_kings_armor.description": "国王的铠甲能够在你只剩一颗心时提供额外伤害，并反弹攻击者的伤害",
     "tetra.module.shield/mrqx_kings_armor.item_name": "国王的铠甲",
     "tetra.module.shield/mrqx_kings_armor.material_name": "国王的铠甲",
@@ -1007,6 +1039,10 @@
     "tetra.module.sword/mrqx_steam_supercharge_engine.item_name": "‌蒸汽增压引擎",
     "tetra.module.sword/mrqx_steam_supercharge_engine.material_name": "‌蒸汽增压引擎",
     "tetra.module.sword/mrqx_steam_supercharge_engine.name": "‌蒸汽增压引擎",
+    "tetra.module.sword/mrqx_xiao_amburm.description": "由销汀·桉柏形成的§e贪婪：餍足§r能够提供额外的战利品\n§o她从未如此满足过，哪怕是一刹那§r",
+    "tetra.module.sword/mrqx_xiao_amburm.item_name": "§e贪婪：餍足§r",
+    "tetra.module.sword/mrqx_xiao_amburm.material_name": "§e贪婪：餍足§r",
+    "tetra.module.sword/mrqx_xiao_amburm.name": "§e贪婪：餍足§r",
     "tetra.synergy.crossbow/mrqx_nuclear_crossbow": "§4§l核能弩§r",
     "tetra.synergy.shield/mrqx_shield_in_the_lake": "§b§l§o湖中神盾§r",
     "tetra.synergy.sword/mrqx_kyngasycath": "§e§l§o诸王之息§r",
@@ -1019,6 +1055,7 @@
     "tetra.tweak.crossbow_tweak/mrqx_thermal_barrier.left": "100%%",
     "tetra.tweak.crossbow_tweak/mrqx_thermal_barrier.right": "0%%",
     "tetra.tweak.crossbow_tweak/mrqx_thermal_barrier.tooltip": "调整反应热隔层的隔热效率",
+    "tetra.variant.craftsmanship_core": "§6工匠奥秘·匠艺核心§r",
     "tetra.variant.mrqx_charged_blade": "充能刀刃",
     "tetra.variant.mrqx_fission_reactor": "裂变反应堆",
     "tetra.variant.mrqx_heat_vent": "反应散热器",
@@ -1037,6 +1074,7 @@
     "tetra.variant.mrqx_steam_supercharge_engine": "‌蒸汽增压引擎",
     "tetra.variant.mrqx_thermal_barrier": "反应热隔层",
     "tetra.variant.mrqx_thermal_injector": "反应热喷口",
+    "tetra.variant.mrqx_xiao_amburm": "§e贪婪：餍足§r",
     "tetra/schematic/crossbow/mrqx_fission_reactor.description": "将裂变反应堆作为弩核心，能够大幅增加箭矢速度",
     "tetra/schematic/crossbow/mrqx_fission_reactor.name": "裂变反应堆",
     "tetra/schematic/crossbow/mrqx_fission_reactor.slot1": "裂变反应堆",
@@ -1052,6 +1090,9 @@
     "tetra/schematic/crossbow/mrqx_thermal_injector.description": "将反应热喷口用于发射将箭矢，能够大幅减少拉弓时间，增加箭矢速度，并能穿透实体",
     "tetra/schematic/crossbow/mrqx_thermal_injector.name": "反应热喷口",
     "tetra/schematic/crossbow/mrqx_thermal_injector.slot1": "反应热喷口",
+    "tetra/schematic/holo/craftsmanship_core.description": "将§6工匠奥秘·匠艺核心§r作为核心，能够提供极高的工具等级",
+    "tetra/schematic/holo/craftsmanship_core.name": "§6工匠奥秘·匠艺核心§r",
+    "tetra/schematic/holo/craftsmanship_core.slot1": "§6工匠奥秘·匠艺核心§r",
     "tetra/schematic/shield/mrqx_kings_armor.description": "将国王的铠甲镶嵌于盾面，能够在你只剩一颗心时提供额外伤害，并反弹攻击者的伤害",
     "tetra/schematic/shield/mrqx_kings_armor.name": "国王的铠甲",
     "tetra/schematic/shield/mrqx_kings_armor.slot1": "国王的铠甲",
@@ -1090,5 +1131,8 @@
     "tetra/schematic/sword/mrqx_steam_rapier.slot1": "蒸汽刺剑",
     "tetra/schematic/sword/mrqx_steam_supercharge_engine.description": "将‌蒸汽增压引擎作为剑脊，能够大幅增加攻击速度，减少特殊能力冷却时间",
     "tetra/schematic/sword/mrqx_steam_supercharge_engine.name": "‌蒸汽增压引擎",
-    "tetra/schematic/sword/mrqx_steam_supercharge_engine.slot1": "‌蒸汽增压引擎"
+    "tetra/schematic/sword/mrqx_steam_supercharge_engine.slot1": "‌蒸汽增压引擎",
+    "tetra/schematic/sword/mrqx_xiao_amburm.description": "将销汀·桉柏作为剑刃，形成的§e贪婪：餍足§r能够提供额外的战利品，同时具有较短的攻击距离和较高的伤害与攻击速度\n§o她从未如此满足过，哪怕是一刹那§r",
+    "tetra/schematic/sword/mrqx_xiao_amburm.name": "§e贪婪：餍足§r",
+    "tetra/schematic/sword/mrqx_xiao_amburm.slot1": "§e贪婪：餍足§r"
 }
