--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -6,6 +6,7 @@
     "effect.mrqx_extra_pack.nuclear_power": "核能动力",
     "effect.mrqx_extra_pack.steam_power": "蒸汽动力",
     "effect.mrqx_extra_pack.steam_supercharge": "蒸汽增压",
+    "effect.mrqx_extra_pack.thresher_effect": "剥壳",
     "item.mrqx_extra_pack.activated_giant_tumor": "活化巨瘤",
     "item.mrqx_extra_pack.active_ender_dragon_bead": "激活·末影龙宝玉",
     "item.mrqx_extra_pack.active_fire_dragon_bead": "激活·火龙宝玉",
@@ -27,6 +28,7 @@
     "item.mrqx_extra_pack.basic_uncoded_cpu": "基础未编码处理器",
     "item.mrqx_extra_pack.black_hole": "黑洞",
     "item.mrqx_extra_pack.blazing_sun": "“耀阳”",
+    "item.mrqx_extra_pack.book_of_over_enchantment": "§9学者奥秘·超魔之书§r",
     "item.mrqx_extra_pack.broken_knight_shield": "损坏骑士盾",
     "item.mrqx_extra_pack.broken_knight_sword": "损坏骑士剑",
     "item.mrqx_extra_pack.broken_sun": "残阳",
@@ -219,6 +221,7 @@
     "item.mrqx_extra_pack.thermal_barrier": "反应热隔层",
     "item.mrqx_extra_pack.thermal_injector": "反应热喷口",
     "item.mrqx_extra_pack.tianshi_yi": "天师仪",
+    "item.mrqx_extra_pack.timeless_ivy": "§a自然奥秘·永恒常春藤§r",
     "item.mrqx_extra_pack.tumor_mutagen": "肿瘤诱变剂",
     "item.mrqx_extra_pack.uranium": "铀",
     "item.mrqx_extra_pack.useless_ring": "无用的圆环",
@@ -290,6 +293,18 @@
     "mrqx_extra_pack.msg.xiao_amburm.7": "有——人——吗——",
     "mrqx_extra_pack.msg.xiao_amburm.8": "*模仿苦力怕的声音\n嘶嘶～",
     "mrqx_extra_pack.msg.xiao_amburm.9": "你喜欢用什么飞行？魔女扫把永远第一！",
+    "mrqx_extra_pack.tetra.effect.final_tactics.name": "§8战术的终结§r",
+    "mrqx_extra_pack.tetra.effect.final_tactics.tooltip": "§f手持带有§8战术的终结§f的弩时，射出的箭矢造成的伤害变为§6 170%% §f，并为目标附加5秒§7穿孔I§f效果§f。",
+    "mrqx_extra_pack.tetra.effect.flame_and_steel.name": "§c火与钢§r",
+    "mrqx_extra_pack.tetra.effect.flame_and_steel.tooltip": "§f手持带有§c火与钢§f的剑时，如果生命值低于§6 50%% §f，则使造成的伤害提升至§6 280%% §f，受到的伤害降低§6 60%% §f。",
+    "mrqx_extra_pack.tetra.effect.paths_must_be_opened.name": "§1必须开辟的通路§r",
+    "mrqx_extra_pack.tetra.effect.paths_must_be_opened.tooltip": "§f掷出带有§1必须开辟的通路§f的双头工具后，命中额外对目标周围所有生物造成攻击力§6 160%% §f的伤害和§6 6 §f秒§e眩晕I§f，随后自身移动至命中点§f。",
+    "mrqx_extra_pack.tetra.effect.thresher.name": "§e剥壳§r",
+    "mrqx_extra_pack.tetra.effect.thresher.tooltip": "§f手持带有§e剥壳§f的弓时，射出的箭矢为目标附加§e剥壳§f效果（已有则等级+1），并额外造成§6 目标护甲值 × (50%% + §e剥壳§6效果等级 × 5%%) §f攻击力的魔法伤害。",
+    "mrqx_extra_pack.tetra.effect.trial_of_thorns.name": "§6披荆斩棘§r",
+    "mrqx_extra_pack.tetra.effect.trial_of_thorns.tooltip": "§f手持带有§6披荆斩棘§f的盾牌时，击杀生物时获得最大生命值§6 12%% §f的临时生命值（不超过最大生命值的§6 300%% §f）；持有临时生命值时，受到攻击时对攻击者造成攻击力§6 61%% §f的魔法伤害§f。",
+    "mrqx_extra_pack.tetra.effect.truesilver_slash.name": "§b真银斩§r",
+    "mrqx_extra_pack.tetra.effect.truesilver_slash.tooltip": "§f手持带有§b真银斩§f的单头工具时，攻击额外造成攻击力§6 100%% §f的§b冻结损伤§f。",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.00": "未持有",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.01": "等级：%s",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.02": "剩余时长：%ss",
@@ -421,6 +436,9 @@
     "mrqx_extra_pack.tooltips.blazing_sun.2": "“手执威光，便是为了扫尽世间恶行。”",
     "mrqx_extra_pack.tooltips.blazing_sun.3": "使造成的伤害+20%，若敌人距离自身小于3格，则使此次伤害变为真实伤害",
     "mrqx_extra_pack.tooltips.blazing_sun.4": "§3强化：攻击时对周围3格内所有非玩家生物造成(攻击力 × 20%)的真实伤害§r",
+    "mrqx_extra_pack.tooltips.book_of_over_enchantment.1": "阅历无数的知识后，你写就了这本你自己都难以阅读的书籍",
+    "mrqx_extra_pack.tooltips.book_of_over_enchantment.2": "§e再度凝魔：置于背包时，会在附魔时再次触发所有器官的附魔效果（无论是否唯一）§r",
+    "mrqx_extra_pack.tooltips.book_of_over_enchantment.3": "§e超量注魔：手持时，如果某一附魔槽位的附魔结果中存在正面附魔，则将该槽位所需等级随机加至该槽位的所有正面附魔，然后将该槽位所需等级加上所有附魔等级之和（消耗等级不变）§r",
     "mrqx_extra_pack.tooltips.broken_knight_shield.1": "使受到的伤害-5%",
     "mrqx_extra_pack.tooltips.broken_knight_sword.1": "使造成的伤害+5%",
     "mrqx_extra_pack.tooltips.broken_sun.1": "Broken sun,",
@@ -454,8 +472,8 @@
     "mrqx_extra_pack.tooltips.cpu.1": "“检测到无效指令，正在使用默认指令：通用计算”",
     "mrqx_extra_pack.tooltips.cpu.2": "每有一个§e处理器§r器官，§7算力§r+1",
     "mrqx_extra_pack.tooltips.craftsmanship_core.1": "这个世界过去失传的无数工艺凝结于此……你知道这意味着什么",
-    "mrqx_extra_pack.tooltips.craftsmanship_core.2": "§e极致技艺：置于背包时，解锁数个Tetra额外升级项目（每个工具只能升级一种，无完整度消耗）§r",
-    "mrqx_extra_pack.tooltips.craftsmanship_core.3": "§e万能工具：置于背包时，为Tetra改造提供99级全工具等级§r",
+    "mrqx_extra_pack.tooltips.craftsmanship_core.2": "§e极致技艺：置于背包时，解锁数个Tetra额外升级项目（每个部件只能升级一种，无完整度消耗）§r",
+    "mrqx_extra_pack.tooltips.craftsmanship_core.3": "§e万能工具：置于背包时，为Tetra改造提供99级全工具等级（可改造为全息球，但会失去【极致技艺】效果）§r",
     "mrqx_extra_pack.tooltips.crispy_belly.1": "脆肚好吃",
     "mrqx_extra_pack.tooltips.crispy_belly.2": "……翠杜？",
     "mrqx_extra_pack.tooltips.dark_sun_seed.1": "暗无天日",
@@ -749,8 +767,8 @@
     "mrqx_extra_pack.tooltips.recorder.1": "我来到，我看见，我记录",
     "mrqx_extra_pack.tooltips.recorder.2": "使你记录击杀过的生物，对该类生物的伤害+(√击杀次数)%",
     "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.1": "“别急别急，人人有份~”",
-    "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.2": "§e魂灵残影：每隔一段时间，随机攻击附近一位怪物，造成少量魔法伤害、0.5s缓慢IV、永久§c魂灵残影§e（已有§c魂灵残影§e则等级+1）§r",
-    "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.3": "§e破灭魂灵：攻击带有§c魂灵残影§e的敌人时，有30%概率消耗§c魂灵残影§e，造成小范围爆炸及范围魔法伤害（伤害值与§c魂灵残影§e等级成正比）。如果装备了超过三个§c灵魂奥秘·死魂灵的余息§e则升级为§c爆裂黎明§e，造成大范围爆炸及范围普通+魔法伤害（伤害值与§c魂灵残影§e等级成正比）§r",
+    "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.2": "§e魂灵残影：装备后，每隔一段时间，随机攻击附近一位怪物，造成少量魔法伤害、0.5s缓慢IV、永久§c魂灵残影§e（已有§c魂灵残影§e则等级+1）§r",
+    "mrqx_extra_pack.tooltips.residual_breath_of_dead_soul.3": "§e破灭魂灵：装备后，攻击带有§c魂灵残影§e的敌人时，有30%概率消耗§c魂灵残影§e，造成小范围爆炸及范围魔法伤害（伤害值与§c魂灵残影§e等级成正比）。如果装备了超过三个§c灵魂奥秘·死魂灵的余息§e则升级为§c爆裂黎明§e，造成大范围爆炸及范围普通+魔法伤害（伤害值与§c魂灵残影§e等级成正比）§r",
     "mrqx_extra_pack.tooltips.resolute_knight_shield.1": "骑士，应具有怜悯与诚实……",
     "mrqx_extra_pack.tooltips.resolute_knight_shield.2": "“以§k史蒂夫§r的名义起誓！”",
     "mrqx_extra_pack.tooltips.resolute_knight_shield.3": "使受到的伤害-20%，并随机使此次伤害无法§e无视护甲§r/§e无视状态效果§r/§e无视附魔§r",
@@ -774,8 +792,8 @@
     "mrqx_extra_pack.tooltips.rose_second_bloom_cpu.3": "激活后，每有2点§7算力§r，随机选择胸腔中的一个同时为§c玫瑰§r和§e激活§r的器官，触发其非唯一激活效果",
     "mrqx_extra_pack.tooltips.rose_second_bloom_cpu.4": "每个§c玫瑰§r器官提供+1§7算力§r§c（此效果唯一）§r",
     "mrqx_extra_pack.tooltips.sages_book.1": "扉页书写着无数的签名，即便他们/她们/它们/衪们从未降临于此……",
-    "mrqx_extra_pack.tooltips.sages_book.2": "§e对相超限：释放法术时，根据当前法力值与已消耗法力值的差值提供超限等级§r",
-    "mrqx_extra_pack.tooltips.sages_book.3": "§e逆转回复：当前法力值小于等于最大法力值的10%时，反转当前法力值与已消耗法力值，冷却时间10s§r",
+    "mrqx_extra_pack.tooltips.sages_book.2": "§e对相超限：装备后，释放法术时，根据当前法力值与已消耗法力值的差值提供超限等级§r",
+    "mrqx_extra_pack.tooltips.sages_book.3": "§e逆转回复：装备后，当前法力值小于等于最大法力值的10%时，反转当前法力值与已消耗法力值，冷却时间10s§r",
     "mrqx_extra_pack.tooltips.sculk_brandguider.1": "它引领着幽匿的延伸",
     "mrqx_extra_pack.tooltips.sculk_brandguider.2": "将你脚下及周围的、可被转变为幽匿块的方块转变为幽匿块，每秒触发一次",
     "mrqx_extra_pack.tooltips.sculk_collectors.1": "它吸收着幽匿的养分",
@@ -810,8 +828,8 @@
     "mrqx_extra_pack.tooltips.sentient_greatscythe.3": "§e增生适应：手持时受伤，将获得对同种伤害的抗性（虚空伤害除外）§r",
     "mrqx_extra_pack.tooltips.shadow_of_caerula_arbor.1": "§c请在水中进行挑战，否则最终BOSS无法击败！！！§r",
     "mrqx_extra_pack.tooltips.shield_generator.1": "“啥都能挡，大概”",
-    "mrqx_extra_pack.tooltips.shield_generator.2": "§e能量护盾：消耗资源值回复耐久，有耐久时消耗耐久抵消受到的伤害（虚空伤害除外）§r",
-    "mrqx_extra_pack.tooltips.shield_generator.3": "§e过载输出：护盾耐久降至0时不会损毁，且会使本次伤害直接归零并使身上所有正面效果等级+1，护盾将进入10s的冷却§r",
+    "mrqx_extra_pack.tooltips.shield_generator.2": "§e能量护盾：装备后，消耗资源值回复耐久，有耐久时消耗耐久抵消受到的伤害（虚空伤害除外）§r",
+    "mrqx_extra_pack.tooltips.shield_generator.3": "§e过载输出：装备后，护盾耐久降至0时不会损毁，且会使本次伤害直接归零并使身上所有正面效果等级+1，护盾将进入10s的冷却§r",
     "mrqx_extra_pack.tooltips.sin_acedia_belphegor.1": "陷阱能困住肉体，而怠倦却能困住灵魂……",
     "mrqx_extra_pack.tooltips.sin_acedia_belphegor.2": "激活时，每秒恢复3%最大生命值的生命值",
     "mrqx_extra_pack.tooltips.sin_acedia_belphegor.3": "作为代价，移动速度-50%",
@@ -913,6 +931,9 @@
     "mrqx_extra_pack.tooltips.thermal_injector.4": "必须与§e反应舱室§r相邻",
     "mrqx_extra_pack.tooltips.tianshi_yi.1": "谷种入田野，又是一个好时节",
     "mrqx_extra_pack.tooltips.tianshi_yi.2": "根据§7算力§r持续催熟自身所在格及与其相连的农作物",
+    "mrqx_extra_pack.tooltips.timeless_ivy.1": "它缠绕在你……和你的工具上",
+    "mrqx_extra_pack.tooltips.timeless_ivy.2": "§e玛娜修复：装备后，持续尝试消耗魔力值修复你双手中及护甲栏中物品的耐久（每50魔力值修复1耐久）§r",
+    "mrqx_extra_pack.tooltips.timeless_ivy.3": "§e玛娜强化：装备后，攻击附带(当前魔力值 * 0.005 * 攻击力)的魔法伤害§r",
     "mrqx_extra_pack.tooltips.tumor_mutagen.1": "饮用后随机将胸腔中的一个§e无形肿瘤§r转化为§e恶性肿瘤§r",
     "mrqx_extra_pack.tooltips.tumor_mutagen.2": "§e恶性肿瘤§r的数值较原来会有一定提升，但存在副作用",
     "mrqx_extra_pack.tooltips.useless_ring.1": "激活后，暴击伤害、暴击概率+10%",
@@ -939,6 +960,20 @@
     "mrqx_extra_pack.tooltips.worn_out_steam_engine.1": "……修一修没准还能用",
     "mrqx_extra_pack.tooltips.xiao_amburm.1": "补药吃窝！",
     "spell.mrqx_extra_pack.earth_without_earth": "悬根定松图",
+    "tetra.improvement.mrqx_craftsmanship_core_final_tactics.description": "让他们有来无回",
+    "tetra.improvement.mrqx_craftsmanship_core_final_tactics.name": "§8战术的终结§r",
+    "tetra.improvement.mrqx_craftsmanship_core_flame_and_steel.description": "I’ve become shapeless, now taste your own divine",
+    "tetra.improvement.mrqx_craftsmanship_core_flame_and_steel.name": "§c火与钢§r",
+    "tetra.improvement.mrqx_craftsmanship_core_paths_must_be_opened.description": "海渊会消化你们的骨骸",
+    "tetra.improvement.mrqx_craftsmanship_core_paths_must_be_opened.name": "§1必须开辟的通路§r",
+    "tetra.improvement.mrqx_craftsmanship_core_thresher.description": "飞！刻！大！于！维！",
+    "tetra.improvement.mrqx_craftsmanship_core_thresher.name": "§e剥壳§r",
+    "tetra.improvement.mrqx_craftsmanship_core_trial_of_thorns.description": "你们的罪行无可辩驳",
+    "tetra.improvement.mrqx_craftsmanship_core_trial_of_thorns.name": "§6披荆斩棘§r",
+    "tetra.improvement.mrqx_craftsmanship_core_truesilver_slash.description": "我的仇敌，我的玩物？",
+    "tetra.improvement.mrqx_craftsmanship_core_truesilver_slash.name": "§b真银斩§r",
+    "tetra.improvement.mrqx_craftsmanship_core_ultimate_stability.description": "一种早已失传的稳固技巧，能够使你的工具具备更多改造的潜力",
+    "tetra.improvement.mrqx_craftsmanship_core_ultimate_stability.name": "§6终极稳固§r",
     "tetra.material.mrqx_active_ender_dragon_bead": "激活·末影龙宝玉",
     "tetra.material.mrqx_active_ender_dragon_bead.prefix": "激活·末影龙宝玉",
     "tetra.material.mrqx_active_fire_dragon_bead": "激活·火龙宝玉",
@@ -983,10 +1018,10 @@
     "tetra.module.crossbow/mrqx_thermal_injector.item_name": "反应热喷口",
     "tetra.module.crossbow/mrqx_thermal_injector.material_name": "反应热喷口",
     "tetra.module.crossbow/mrqx_thermal_injector.name": "反应热喷口",
-    "tetra.module.holo/craftsmanship_core.description": "§6工匠奥秘·匠艺核心§r能够提供极高的工具等级",
-    "tetra.module.holo/craftsmanship_core.item_name": "§6工匠奥秘·匠艺核心§r",
-    "tetra.module.holo/craftsmanship_core.material_name": "§6工匠奥秘·匠艺核心§r",
-    "tetra.module.holo/craftsmanship_core.name": "§6工匠奥秘·匠艺核心§r",
+    "tetra.module.holo/mrqx_craftsmanship_core.description": "§6工匠奥秘·匠艺核心§r能够提供极高的工具等级",
+    "tetra.module.holo/mrqx_craftsmanship_core.item_name": "§6工匠奥秘·匠艺核心§r",
+    "tetra.module.holo/mrqx_craftsmanship_core.material_name": "§6工匠奥秘·匠艺核心§r",
+    "tetra.module.holo/mrqx_craftsmanship_core.name": "§6工匠奥秘·匠艺核心§r",
     "tetra.module.shield/mrqx_kings_armor.description": "国王的铠甲能够在你只剩一颗心时提供额外伤害，并反弹攻击者的伤害",
     "tetra.module.shield/mrqx_kings_armor.item_name": "国王的铠甲",
     "tetra.module.shield/mrqx_kings_armor.material_name": "国王的铠甲",
@@ -1043,6 +1078,18 @@
     "tetra.module.sword/mrqx_xiao_amburm.item_name": "§e贪婪：餍足§r",
     "tetra.module.sword/mrqx_xiao_amburm.material_name": "§e贪婪：餍足§r",
     "tetra.module.sword/mrqx_xiao_amburm.name": "§e贪婪：餍足§r",
+    "tetra.stats.mrqx_extra_pack:final_tactics": "§8战术的终结§r",
+    "tetra.stats.mrqx_extra_pack:final_tactics.tooltip_short": "让他们有来无回",
+    "tetra.stats.mrqx_extra_pack:flame_and_steel": "§c火与钢§r",
+    "tetra.stats.mrqx_extra_pack:flame_and_steel.tooltip_short": "A tooth for a tooth",
+    "tetra.stats.mrqx_extra_pack:paths_must_be_opened": "§1必须开辟的通路§r",
+    "tetra.stats.mrqx_extra_pack:paths_must_be_opened.tooltip_short": "海渊会消化你们的骨骸",
+    "tetra.stats.mrqx_extra_pack:thresher": "§e剥壳§r",
+    "tetra.stats.mrqx_extra_pack:thresher.tooltip_short": "飞！刻！大！于！维！",
+    "tetra.stats.mrqx_extra_pack:trial_of_thorns": "§6披荆斩棘§r",
+    "tetra.stats.mrqx_extra_pack:trial_of_thorns.tooltip_short": "你们的罪行无可辩驳",
+    "tetra.stats.mrqx_extra_pack:truesilver_slash": "§b真银斩§r",
+    "tetra.stats.mrqx_extra_pack:truesilver_slash.tooltip_short": "当他们耀武扬威时，无人知晓……",
     "tetra.synergy.crossbow/mrqx_nuclear_crossbow": "§4§l核能弩§r",
     "tetra.synergy.shield/mrqx_shield_in_the_lake": "§b§l§o湖中神盾§r",
     "tetra.synergy.sword/mrqx_kyngasycath": "§e§l§o诸王之息§r",
@@ -1055,8 +1102,8 @@
     "tetra.tweak.crossbow_tweak/mrqx_thermal_barrier.left": "100%%",
     "tetra.tweak.crossbow_tweak/mrqx_thermal_barrier.right": "0%%",
     "tetra.tweak.crossbow_tweak/mrqx_thermal_barrier.tooltip": "调整反应热隔层的隔热效率",
-    "tetra.variant.craftsmanship_core": "§6工匠奥秘·匠艺核心§r",
     "tetra.variant.mrqx_charged_blade": "充能刀刃",
+    "tetra.variant.mrqx_craftsmanship_core": "§6工匠奥秘·匠艺核心§r",
     "tetra.variant.mrqx_fission_reactor": "裂变反应堆",
     "tetra.variant.mrqx_heat_vent": "反应散热器",
     "tetra.variant.mrqx_kings_armor": "国王的铠甲",
@@ -1075,6 +1122,12 @@
     "tetra.variant.mrqx_thermal_barrier": "反应热隔层",
     "tetra.variant.mrqx_thermal_injector": "反应热喷口",
     "tetra.variant.mrqx_xiao_amburm": "§e贪婪：餍足§r",
+    "tetra/schematic/bow/mrqx_craftsmanship_core_thresher.description": "飞！刻！大！于！维！",
+    "tetra/schematic/bow/mrqx_craftsmanship_core_thresher.name": "§e剥壳§r",
+    "tetra/schematic/bow/mrqx_craftsmanship_core_thresher.slot1": "§e剥壳§r",
+    "tetra/schematic/crossbow/mrqx_craftsmanship_core_final_tactics.description": "让他们有来无回",
+    "tetra/schematic/crossbow/mrqx_craftsmanship_core_final_tactics.name": "§8战术的终结§r",
+    "tetra/schematic/crossbow/mrqx_craftsmanship_core_final_tactics.slot1": "§8战术的终结§r",
     "tetra/schematic/crossbow/mrqx_fission_reactor.description": "将裂变反应堆作为弩核心，能够大幅增加箭矢速度",
     "tetra/schematic/crossbow/mrqx_fission_reactor.name": "裂变反应堆",
     "tetra/schematic/crossbow/mrqx_fission_reactor.slot1": "裂变反应堆",
@@ -1090,9 +1143,18 @@
     "tetra/schematic/crossbow/mrqx_thermal_injector.description": "将反应热喷口用于发射将箭矢，能够大幅减少拉弓时间，增加箭矢速度，并能穿透实体",
     "tetra/schematic/crossbow/mrqx_thermal_injector.name": "反应热喷口",
     "tetra/schematic/crossbow/mrqx_thermal_injector.slot1": "反应热喷口",
-    "tetra/schematic/holo/craftsmanship_core.description": "将§6工匠奥秘·匠艺核心§r作为核心，能够提供极高的工具等级",
-    "tetra/schematic/holo/craftsmanship_core.name": "§6工匠奥秘·匠艺核心§r",
-    "tetra/schematic/holo/craftsmanship_core.slot1": "§6工匠奥秘·匠艺核心§r",
+    "tetra/schematic/double/mrqx_craftsmanship_core_paths_must_be_opened.description": "海渊会消化你们的骨骸",
+    "tetra/schematic/double/mrqx_craftsmanship_core_paths_must_be_opened.name": "§1必须开辟的通路§r",
+    "tetra/schematic/double/mrqx_craftsmanship_core_paths_must_be_opened.slot1": "§1必须开辟的通路§r",
+    "tetra/schematic/holo/mrqx_craftsmanship_core.description": "将§6工匠奥秘·匠艺核心§r作为核心，能够提供极高的工具等级",
+    "tetra/schematic/holo/mrqx_craftsmanship_core.name": "§6工匠奥秘·匠艺核心§r",
+    "tetra/schematic/holo/mrqx_craftsmanship_core.slot1": "§6工匠奥秘·匠艺核心§r",
+    "tetra/schematic/holo/mrqx_craftsmanship_core_ultimate_stability.description": "一种早已失传的稳固技巧，能够使你的工具具备更多改造的潜力",
+    "tetra/schematic/holo/mrqx_craftsmanship_core_ultimate_stability.name": "§6终极稳固§r",
+    "tetra/schematic/holo/mrqx_craftsmanship_core_ultimate_stability.slot1": "§6终极稳固§r",
+    "tetra/schematic/shared/mrqx_craftsmanship_core_ultimate_stability.description": "一种早已失传的稳固技巧，能够使你的工具具备更多改造的潜力",
+    "tetra/schematic/shared/mrqx_craftsmanship_core_ultimate_stability.name": "§6终极稳固§r",
+    "tetra/schematic/shared/mrqx_craftsmanship_core_ultimate_stability.slot1": "§6终极稳固§r",
     "tetra/schematic/shield/mrqx_kings_armor.description": "将国王的铠甲镶嵌于盾面，能够在你只剩一颗心时提供额外伤害，并反弹攻击者的伤害",
     "tetra/schematic/shield/mrqx_kings_armor.name": "国王的铠甲",
     "tetra/schematic/shield/mrqx_kings_armor.slot1": "国王的铠甲",
@@ -1102,9 +1164,18 @@
     "tetra/schematic/shield/mrqx_kings_fellowship.description": "将国王的护戒固定于盾后，能够提供击晕敌人的能力",
     "tetra/schematic/shield/mrqx_kings_fellowship.name": "国王的护戒",
     "tetra/schematic/shield/mrqx_kings_fellowship.slot1": "国王的护戒",
+    "tetra/schematic/shield/plate/mrqx_craftsmanship_core_trial_of_thorns.description": "你们的罪行无可辩驳",
+    "tetra/schematic/shield/plate/mrqx_craftsmanship_core_trial_of_thorns.name": "§6披荆斩棘§r",
+    "tetra/schematic/shield/plate/mrqx_craftsmanship_core_trial_of_thorns.slot1": "§6披荆斩棘§r",
+    "tetra/schematic/single/mrqx_craftsmanship_core_truesilver_slash.description": "……当他们哀嚎求饶时，无人应答",
+    "tetra/schematic/single/mrqx_craftsmanship_core_truesilver_slash.name": "§b真银斩§r",
+    "tetra/schematic/single/mrqx_craftsmanship_core_truesilver_slash.slot1": "§b真银斩§r",
     "tetra/schematic/sword/mrqx_charged_blade.description": "将充能刀刃作为刀刃能够提供强大的真实横扫和击晕效果。",
     "tetra/schematic/sword/mrqx_charged_blade.name": "充能刀刃",
     "tetra/schematic/sword/mrqx_charged_blade.slot1": "充能刀刃",
+    "tetra/schematic/sword/mrqx_craftsmanship_core_flame_and_steel.description": "I’ve become shapeless, now taste your own divine",
+    "tetra/schematic/sword/mrqx_craftsmanship_core_flame_and_steel.name": "§c火与钢§r",
+    "tetra/schematic/sword/mrqx_craftsmanship_core_flame_and_steel.slot1": "§c火与钢§r",
     "tetra/schematic/sword/mrqx_kings_crown.description": "将诸王的冠冕作为护手，能够使你的抗伤能力提升，并提升最小伤害",
     "tetra/schematic/sword/mrqx_kings_crown.name": "诸王的冠冕",
     "tetra/schematic/sword/mrqx_kings_crown.slot1": "诸王的冠冕",
@@ -1134,5 +1205,8 @@
     "tetra/schematic/sword/mrqx_steam_supercharge_engine.slot1": "‌蒸汽增压引擎",
     "tetra/schematic/sword/mrqx_xiao_amburm.description": "将销汀·桉柏作为剑刃，形成的§e贪婪：餍足§r能够提供额外的战利品，同时具有较短的攻击距离和较高的伤害与攻击速度\n§o她从未如此满足过，哪怕是一刹那§r",
     "tetra/schematic/sword/mrqx_xiao_amburm.name": "§e贪婪：餍足§r",
-    "tetra/schematic/sword/mrqx_xiao_amburm.slot1": "§e贪婪：餍足§r"
+    "tetra/schematic/sword/mrqx_xiao_amburm.slot1": "§e贪婪：餍足§r",
+    "tetra/schematic/toolbelt/mrqx_craftsmanship_core_ultimate_stability.description": "一种早已失传的稳固技巧，能够使你的工具具备更多改造的潜力",
+    "tetra/schematic/toolbelt/mrqx_craftsmanship_core_ultimate_stability.name": "§6终极稳固§r",
+    "tetra/schematic/toolbelt/mrqx_craftsmanship_core_ultimate_stability.slot1": "§6终极稳固§r"
 }
