--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -23,6 +23,7 @@
     "item.mrqx_extra_pack.appendix_paper": "纸阑尾",
     "item.mrqx_extra_pack.appendix_paper_written": "书写过的纸阑尾",
     "item.mrqx_extra_pack.artificial_mineral_cluster": "人造矿簇",
+    "item.mrqx_extra_pack.atomic_disassembler": "§7资源奥秘·原子分解机§r",
     "item.mrqx_extra_pack.aurora_active_ice_dragon_bead": "激活·冰龙宝玉·极光化",
     "item.mrqx_extra_pack.automatic_wax_protector": "自动蜡护仪",
     "item.mrqx_extra_pack.basic_uncoded_cpu": "基础未编码处理器",
@@ -154,6 +155,7 @@
     "item.mrqx_extra_pack.portable_medical_checkup_device": "便携式体检仪",
     "item.mrqx_extra_pack.prison_soul": "死狱之魂",
     "item.mrqx_extra_pack.proud_soul": "荣耀之魂",
+    "item.mrqx_extra_pack.radiant_star": "§b星辰奥秘·灿芒之星§r",
     "item.mrqx_extra_pack.raw_uranium": "粗铀",
     "item.mrqx_extra_pack.re_active_pill": "复激活药丸",
     "item.mrqx_extra_pack.re_active_pill_moderation": "‌复激活药丸·温和化",
@@ -165,9 +167,10 @@
     "item.mrqx_extra_pack.rib_paper": "纸肋骨",
     "item.mrqx_extra_pack.rib_paper_written": "书写过的纸肋骨",
     "item.mrqx_extra_pack.rib_the_pressure_to_survive": "“生存的重压”肋骨",
+    "item.mrqx_extra_pack.ring_from_god": "§5罪者奥秘·神授指环§r",
     "item.mrqx_extra_pack.rose_language_cpu": "玫瑰“花语”处理器",
     "item.mrqx_extra_pack.rose_second_bloom_cpu": "玫瑰“再度绽放”处理器",
-    "item.mrqx_extra_pack.sages_book": "§5魔法奥秘·贤者宝典§r",
+    "item.mrqx_extra_pack.sages_book": "§d魔法奥秘·贤者宝典§r",
     "item.mrqx_extra_pack.sculk_brandguider": "幽匿引痕体",
     "item.mrqx_extra_pack.sculk_collectors": "幽匿集养体",
     "item.mrqx_extra_pack.sculk_depositer": "幽匿沉积体",
@@ -223,6 +226,7 @@
     "item.mrqx_extra_pack.tianshi_yi": "天师仪",
     "item.mrqx_extra_pack.timeless_ivy": "§a自然奥秘·永恒常春藤§r",
     "item.mrqx_extra_pack.tumor_mutagen": "肿瘤诱变剂",
+    "item.mrqx_extra_pack.ultimate_stew": "§3食物奥秘·无尽煲§r",
     "item.mrqx_extra_pack.uranium": "铀",
     "item.mrqx_extra_pack.useless_ring": "无用的圆环",
     "item.mrqx_extra_pack.vacuum_freezer": "真空冷冻机",
@@ -423,6 +427,9 @@
     "mrqx_extra_pack.tooltips.appendix_paper.1": "可书写：幸运、箭矢闪避、龙息炸弹、怪异、爆炸",
     "mrqx_extra_pack.tooltips.appendix_paper_written.1": "奇迹般地，存在于纸面上的数据成为了事实",
     "mrqx_extra_pack.tooltips.artificial_mineral_cluster.1": "只是把一些矿物混合在了一起",
+    "mrqx_extra_pack.tooltips.atomic_disassembler.1": "万物皆为原子所构",
+    "mrqx_extra_pack.tooltips.atomic_disassembler.2": "§e分子离解：挖掘时自动熔炼，若为矿物则掉落五倍产物，若为石头则连锁破坏3×3×3范围内的石头（冷却0.1s），挖掘的同时消耗资源值回复耐久§r",
+    "mrqx_extra_pack.tooltips.atomic_disassembler.3": "§e原子重构：造成伤害时，根据伤害值额外掉落矿簇§r",
     "mrqx_extra_pack.tooltips.aurora_active_ice_dragon_bead.1": "它在你手里映射极光",
     "mrqx_extra_pack.tooltips.aurora_active_ice_dragon_bead.2": "造成伤害时，额外造成(-伤害值 × 体温)的§b冻结损伤§r",
     "mrqx_extra_pack.tooltips.automatic_wax_protector.1": "防水性能++",
@@ -759,6 +766,9 @@
     "mrqx_extra_pack.tooltips.proud_soul.1": "武者的至高荣耀",
     "mrqx_extra_pack.tooltips.proud_soul.2": "激活后，使用Tetra的武士刀攻击将无视敌人的无敌时间",
     "mrqx_extra_pack.tooltips.proud_soul.3": "§c集齐四魂时，鬼村村正和千夜之寒也同样生效§r",
+    "mrqx_extra_pack.tooltips.radiant_star.1": "它所指向的星座，名为：时钟座",
+    "mrqx_extra_pack.tooltips.radiant_star.2": "§e斗转星移：手持长按右键，时间将以六十倍速流动§r",
+    "mrqx_extra_pack.tooltips.radiant_star.3": "§e延流之时：作为饰品装备时，每10s使所有正面效果延长5s§r",
     "mrqx_extra_pack.tooltips.re_active_pill.1": "过量药物带来了重复的激活，但……代价是什么？",
     "mrqx_extra_pack.tooltips.re_active_pill.2": "激活后，随机选取胸腔中的一个§e唯一激活§r器官，再次触发其唯一激活效果，对部分效果无效",
     "mrqx_extra_pack.tooltips.re_active_pill_moderation.1": "代价小了点",
@@ -783,6 +793,9 @@
     "mrqx_extra_pack.tooltips.rib_the_pressure_to_survive.5": "冷却时间1秒",
     "mrqx_extra_pack.tooltips.rib_the_pressure_to_survive.6": "激活后，最大生命值+5%",
     "mrqx_extra_pack.tooltips.rib_the_pressure_to_survive.7": "如果集齐所有种类的§1深海§r器官，上述加成翻倍",
+    "mrqx_extra_pack.tooltips.ring_from_god.1": "罪孽与使命",
+    "mrqx_extra_pack.tooltips.ring_from_god.2": "§e汝罪已诏：作为饰品装备后，所有七原罪器官的负面效果将不会触发§r",
+    "mrqx_extra_pack.tooltips.ring_from_god.3": "§e授汝之命：作为饰品装备后，自身受到的伤害不超过(180 ÷ 七原罪器官数)点，受伤后伤害免疫时间延长至(1 + 0.5 × 七原罪器官数)秒§r",
     "mrqx_extra_pack.tooltips.rose_language_cpu.1": "指令：聆听花语",
     "mrqx_extra_pack.tooltips.rose_language_cpu.2": "它们在说话",
     "mrqx_extra_pack.tooltips.rose_language_cpu.3": "激活后，每点§7算力§r提供+1§c玫瑰§r器官个数",
@@ -836,7 +849,7 @@
     "mrqx_extra_pack.tooltips.sin_acedia_belphegor.4": "§4集齐七原罪，效果将变为两倍§r",
     "mrqx_extra_pack.tooltips.sin_and_judgement.1": "此刻，你清楚的意识到，你即是神，你即可代天授命。",
     "mrqx_extra_pack.tooltips.sin_and_judgement.2": "同时触发所有七原罪碎片的§e正面§r效果（无需付出代价），且视作集齐全套",
-    "mrqx_extra_pack.tooltips.sin_and_judgement.3": "每天开始时获得§e神恩：一瞥§r，同时清除其他所有神恩相关buff",
+    "mrqx_extra_pack.tooltips.sin_and_judgement.3": "每秒随机获得随机神明特许免疫buff，时长为(§4七原罪§r器官数 × 1.5)s，等级为(§4七原罪§r器官数 ÷ 3)",
     "mrqx_extra_pack.tooltips.sin_avaritia_mammon.1": "人类拥有思维，拥有无穷尽的欲望和动机，总是永不满足地寻找、占有、创造而又毁灭……",
     "mrqx_extra_pack.tooltips.sin_avaritia_mammon.2": "激活时，所有实体和箱子战利品变为两倍",
     "mrqx_extra_pack.tooltips.sin_avaritia_mammon.3": "作为代价，幸运-100%，每隔60秒清除周围所有的掉落物（升级：每清除一个掉落物受到来自自己的真实伤害，伤害值为最大生命值的0.5%）",
@@ -855,7 +868,7 @@
     "mrqx_extra_pack.tooltips.sin_ira_samael.4": "§4集齐七原罪，效果将变为两倍§r",
     "mrqx_extra_pack.tooltips.sin_luxuria_asmodeus.1": "人类渴望着异性的胴体，生命渴望着血肉的鲜美……",
     "mrqx_extra_pack.tooltips.sin_luxuria_asmodeus.2": "激活时，周围的成年动物持续处于繁殖状态（升级：未成年动物加快生长）",
-    "mrqx_extra_pack.tooltips.sin_luxuria_asmodeus.3": "作为代价，成年动物每秒流失5%最大生命值的生命值",
+    "mrqx_extra_pack.tooltips.sin_luxuria_asmodeus.3": "作为代价，成年动物每秒流失10%最大生命值的生命值",
     "mrqx_extra_pack.tooltips.sin_luxuria_asmodeus.4": "§4集齐七原罪，效果将变为两倍或获得升级§r",
     "mrqx_extra_pack.tooltips.sin_superbia_lucifer.1": "人类以无边的欲望凌驾于万物之上，全然的支配使得人类越发的空虚……",
     "mrqx_extra_pack.tooltips.sin_superbia_lucifer.2": "激活时，免疫除虚空伤害以外的无来源伤害（升级：回复等量生命值），有来源伤害-15%",
@@ -936,6 +949,9 @@
     "mrqx_extra_pack.tooltips.timeless_ivy.3": "§e玛娜强化：装备后，攻击附带(当前魔力值 * 0.005 * 攻击力)的魔法伤害§r",
     "mrqx_extra_pack.tooltips.tumor_mutagen.1": "饮用后随机将胸腔中的一个§e无形肿瘤§r转化为§e恶性肿瘤§r",
     "mrqx_extra_pack.tooltips.tumor_mutagen.2": "§e恶性肿瘤§r的数值较原来会有一定提升，但存在副作用",
+    "mrqx_extra_pack.tooltips.ultimate_stew.1": "仍待填充，如同你的胃……",
+    "mrqx_extra_pack.tooltips.ultimate_stew.2": "§e无尽之锅：作为饰品装备时，食用食物时将该食物复制一份存入无尽煲中，使无尽煲的饥饿值、饱和度增加，并将其记录（不重复）§r",
+    "mrqx_extra_pack.tooltips.ultimate_stew.3": "§e贪婪之食：手持无尽煲长按右键，可以食用无尽煲，每刻能够获得1点饥饿值与1点饱和度（消耗无尽煲中的存量），每次完成食用随机模拟食用记录的一种食物（会触发食用效果，不消耗无尽煲）§r",
     "mrqx_extra_pack.tooltips.useless_ring.1": "激活后，暴击伤害、暴击概率+10%",
     "mrqx_extra_pack.tooltips.vacuum_freezer.1": "一个“冷”笑话",
     "mrqx_extra_pack.tooltips.vacuum_freezer.2": "每秒消耗一定资源点使体温降低，§7算力§r决定效率",
@@ -968,12 +984,12 @@
     "tetra.improvement.mrqx_craftsmanship_core_paths_must_be_opened.name": "§1必须开辟的通路§r",
     "tetra.improvement.mrqx_craftsmanship_core_thresher.description": "飞！刻！大！于！维！",
     "tetra.improvement.mrqx_craftsmanship_core_thresher.name": "§e剥壳§r",
-    "tetra.improvement.mrqx_craftsmanship_core_trial_of_thorns.description": "你们的罪行无可辩驳",
-    "tetra.improvement.mrqx_craftsmanship_core_trial_of_thorns.name": "§6披荆斩棘§r",
     "tetra.improvement.mrqx_craftsmanship_core_truesilver_slash.description": "我的仇敌，我的玩物？",
     "tetra.improvement.mrqx_craftsmanship_core_truesilver_slash.name": "§b真银斩§r",
     "tetra.improvement.mrqx_craftsmanship_core_ultimate_stability.description": "一种早已失传的稳固技巧，能够使你的工具具备更多改造的潜力",
     "tetra.improvement.mrqx_craftsmanship_core_ultimate_stability.name": "§6终极稳固§r",
+    "tetra.improvement.plate/mrqx_craftsmanship_core_trial_of_thorns.description": "你们的罪行无可辩驳",
+    "tetra.improvement.plate/mrqx_craftsmanship_core_trial_of_thorns.name": "§6披荆斩棘§r",
     "tetra.material.mrqx_active_ender_dragon_bead": "激活·末影龙宝玉",
     "tetra.material.mrqx_active_ender_dragon_bead.prefix": "激活·末影龙宝玉",
     "tetra.material.mrqx_active_fire_dragon_bead": "激活·火龙宝玉",
