--- a/kubejs/assets/mrqx_disc_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_disc_pack/lang/zh_cn.json
@@ -18,5 +18,7 @@
     "item.mrqx_disc_pack.rain_of_conflict_in_a_radiant_abyss_disc": "墨染的珍藏唱片",
     "item.mrqx_disc_pack.rain_of_conflict_in_a_radiant_abyss_disc.desc": "ak＋q - Rain of Conflict in a Radiant Abyss",
     "item.mrqx_disc_pack.straight_into_the_lights_disc": "墨染的珍藏唱片",
-    "item.mrqx_disc_pack.straight_into_the_lights_disc.desc": "Cosmograph - Straight into the lights"
+    "item.mrqx_disc_pack.straight_into_the_lights_disc.desc": "Cosmograph - Straight into the lights",
+    "item.mrqx_disc_pack.legend_of_bloodywolf_disc": "布满牙印的唱片",
+    "item.mrqx_disc_pack.legend_of_bloodywolf_disc.desc": "理性蒸发人 feat. 皿良皮车 - Legend of Bloodywolf"
 }
