--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -29,7 +29,7 @@
     "item.mrqx_extra_pack.basic_uncoded_cpu": "基础未编码处理器",
     "item.mrqx_extra_pack.black_hole": "黑洞",
     "item.mrqx_extra_pack.blazing_sun": "“耀阳”",
-    "item.mrqx_extra_pack.book_of_over_enchantment": "§9学者奥秘·超魔之书§r",
+    "item.mrqx_extra_pack.book_of_over_enchantment": "§a学者奥秘·超魔之书§r",
     "item.mrqx_extra_pack.broken_knight_shield": "损坏骑士盾",
     "item.mrqx_extra_pack.broken_knight_sword": "损坏骑士剑",
     "item.mrqx_extra_pack.broken_sun": "残阳",
@@ -43,7 +43,7 @@
     "item.mrqx_extra_pack.compressed_biscuit": "压缩饼干",
     "item.mrqx_extra_pack.core_of_knights": "骑士核心",
     "item.mrqx_extra_pack.cpu": "处理器",
-    "item.mrqx_extra_pack.craftsmanship_core": "§6工匠奥秘·匠艺核心§r",
+    "item.mrqx_extra_pack.craftsmanship_core": "§8工艺奥秘·匠艺核心§r",
     "item.mrqx_extra_pack.crispy_belly": "脆肚",
     "item.mrqx_extra_pack.dark_sun_seed": "暗日种子",
     "item.mrqx_extra_pack.divine_pen": "神之笔",
@@ -129,6 +129,7 @@
     "item.mrqx_extra_pack.muscle_bone_fracture": "“肉斩骨断”肌肉",
     "item.mrqx_extra_pack.muscle_paper": "纸肌肉",
     "item.mrqx_extra_pack.muscle_paper_written": "书写过的纸肌肉",
+    "item.mrqx_extra_pack.my_crown": "§e领主奥秘·“我的王冠”§r",
     "item.mrqx_extra_pack.mystery_craftsmanship": "奥秘·工艺",
     "item.mrqx_extra_pack.mystery_disasters": "奥秘·灾难",
     "item.mrqx_extra_pack.mystery_flesh_and_blood": "奥秘·血肉",
@@ -148,6 +149,8 @@
     "item.mrqx_extra_pack.nightmare_tentacles": "梦魇之触",
     "item.mrqx_extra_pack.nuclear_fuel": "核反应燃料",
     "item.mrqx_extra_pack.origin_sin": "‌原罪·罪源",
+    "item.mrqx_extra_pack.page_of_future": "“未来之章”",
+    "item.mrqx_extra_pack.page_of_past": "“过去之章”",
     "item.mrqx_extra_pack.pancreas_group_hunting": "“集群狩猎”胰",
     "item.mrqx_extra_pack.phantom_heart": "幻魔心脏",
     "item.mrqx_extra_pack.phantom_knight_armor": "幻影骑士甲",
@@ -155,22 +158,23 @@
     "item.mrqx_extra_pack.portable_medical_checkup_device": "便携式体检仪",
     "item.mrqx_extra_pack.prison_soul": "死狱之魂",
     "item.mrqx_extra_pack.proud_soul": "荣耀之魂",
-    "item.mrqx_extra_pack.radiant_star": "§b星辰奥秘·灿芒之星§r",
+    "item.mrqx_extra_pack.radiant_star": "§f星辰奥秘·灿芒之星§r",
     "item.mrqx_extra_pack.raw_uranium": "粗铀",
     "item.mrqx_extra_pack.re_active_pill": "复激活药丸",
     "item.mrqx_extra_pack.re_active_pill_moderation": "‌复激活药丸·温和化",
     "item.mrqx_extra_pack.reactor_chamber": "反应舱室",
     "item.mrqx_extra_pack.recorder": "‌“记录者”",
-    "item.mrqx_extra_pack.residual_breath_of_dead_soul": "§c灵魂奥秘·死魂灵的余息§r",
+    "item.mrqx_extra_pack.residual_breath_of_dead_soul": "§9灵魂奥秘·死魂灵的余息§r",
     "item.mrqx_extra_pack.resolute_knight_shield": "坚毅骑士盾",
     "item.mrqx_extra_pack.rib_antimatter": "反物质肋骨",
     "item.mrqx_extra_pack.rib_paper": "纸肋骨",
     "item.mrqx_extra_pack.rib_paper_written": "书写过的纸肋骨",
     "item.mrqx_extra_pack.rib_the_pressure_to_survive": "“生存的重压”肋骨",
-    "item.mrqx_extra_pack.ring_from_god": "§5罪者奥秘·神授指环§r",
+    "item.mrqx_extra_pack.ring_from_god": "§c罪者奥秘·神授指环§r",
     "item.mrqx_extra_pack.rose_language_cpu": "玫瑰“花语”处理器",
     "item.mrqx_extra_pack.rose_second_bloom_cpu": "玫瑰“再度绽放”处理器",
-    "item.mrqx_extra_pack.sages_book": "§d魔法奥秘·贤者宝典§r",
+    "item.mrqx_extra_pack.sages_book": "§b魔法奥秘·贤者宝典§r",
+    "item.mrqx_extra_pack.save_point": "§5灾难奥秘·存档点§r",
     "item.mrqx_extra_pack.sculk_brandguider": "幽匿引痕体",
     "item.mrqx_extra_pack.sculk_collectors": "幽匿集养体",
     "item.mrqx_extra_pack.sculk_depositer": "幽匿沉积体",
@@ -181,7 +185,7 @@
     "item.mrqx_extra_pack.sculk_rock_breaker": "幽匿裂岩体",
     "item.mrqx_extra_pack.seaborn_beacon_cpu": "‌深海“灯塔”处理器",
     "item.mrqx_extra_pack.seance_cpu": "“降神”处理器",
-    "item.mrqx_extra_pack.sentient_greatscythe": "§2血肉奥秘·觉知巨镰§r",
+    "item.mrqx_extra_pack.sentient_greatscythe": "§4血肉奥秘·觉知巨镰§r",
     "item.mrqx_extra_pack.shield_generator": "§7机械奥秘·护盾发生器§r",
     "item.mrqx_extra_pack.shining_seed": "散发着光亮的种子",
     "item.mrqx_extra_pack.sin_acedia_belphegor": "‌‌原罪·懒惰「贝尔芬格」",
@@ -224,9 +228,10 @@
     "item.mrqx_extra_pack.thermal_barrier": "反应热隔层",
     "item.mrqx_extra_pack.thermal_injector": "反应热喷口",
     "item.mrqx_extra_pack.tianshi_yi": "天师仪",
-    "item.mrqx_extra_pack.timeless_ivy": "§a自然奥秘·永恒常春藤§r",
+    "item.mrqx_extra_pack.timeless_ivy": "§2自然奥秘·永恒常春藤§r",
+    "item.mrqx_extra_pack.timeworn_poetry_strips": "§1从者奥秘·散轶诗简§r",
     "item.mrqx_extra_pack.tumor_mutagen": "肿瘤诱变剂",
-    "item.mrqx_extra_pack.ultimate_stew": "§3食物奥秘·无尽煲§r",
+    "item.mrqx_extra_pack.ultimate_stew": "§6食物奥秘·无尽煲§r",
     "item.mrqx_extra_pack.uranium": "铀",
     "item.mrqx_extra_pack.useless_ring": "无用的圆环",
     "item.mrqx_extra_pack.vacuum_freezer": "真空冷冻机",
@@ -266,6 +271,7 @@
     "mrqx_extra_pack.jei.mrqx_element_damage.5": "§0凋亡损伤§r达到100时，消耗100§0凋亡损伤§r使其额外受到100点凋零伤害（不致死，不受额外加成影响），并使其获得10s的§0凋零§r、§0凋零腐败§r、§0衰弱§r",
     "mrqx_extra_pack.jei.mrqx_element_damage.6": "单次伤害可触发多次损伤效果，状态效果的等级可叠加",
     "mrqx_extra_pack.jei.mrqx_nuclear.1": "用于§7核能§r器官反应",
+    "mrqx_extra_pack.jei.mystery_memories.1": "里面似乎有着什么信息……或许那些用于分析史前生物的机器可以解析它",
     "mrqx_extra_pack.jei.soul_of_emerald_pickaxe.1": "破坏迷宫/城堡类方块时，有1%概率掉落",
     "mrqx_extra_pack.mrqx_god_judgement": "神之惩戒",
     "mrqx_extra_pack.mrqx_mechanical_frenzy": "机械狂潮",
@@ -336,6 +342,22 @@
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.d0": "蒸汽动力：%s %s %s",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.d1": "蒸汽计数：%s",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.e": "蒸汽增压：%s %s",
+    "mrqx_extra_pack.text.quest_future.0": "    回忆旅途的过往    ",
+    "mrqx_extra_pack.text.quest_future.0.hint": "WIP",
+    "mrqx_extra_pack.text.quest_future.1": "      牵着§k她§r的手      ",
+    "mrqx_extra_pack.text.quest_future.1.hint": "WIP",
+    "mrqx_extra_pack.text.quest_future.2": "    注视一切的终结    ",
+    "mrqx_extra_pack.text.quest_future.2.hint": "WIP",
+    "mrqx_extra_pack.text.quest_future.3": "     超越你的极限     ",
+    "mrqx_extra_pack.text.quest_future.3.hint": "WIP",
+    "mrqx_extra_pack.text.quest_past.0": "    当下，正是终焉    ",
+    "mrqx_extra_pack.text.quest_past.0.hint": "WIP",
+    "mrqx_extra_pack.text.quest_past.1": "    时初之间的歌曲    ",
+    "mrqx_extra_pack.text.quest_past.1.hint": "WIP",
+    "mrqx_extra_pack.text.quest_past.2": "   在功亏一篑中屈服   ",
+    "mrqx_extra_pack.text.quest_past.2.hint": "WIP",
+    "mrqx_extra_pack.text.quest_past.3": " 玻璃相聚，却无法成对 ",
+    "mrqx_extra_pack.text.quest_past.3.hint": "WIP",
     "mrqx_extra_pack.tip.tip_0": "你已经安装了mrqx_extra_pack（墨染琴弦的额外包），反馈bug时请注意问题的来源",
     "mrqx_extra_pack.tip.tip_1": "请勿携带偶数的反物质心脏",
     "mrqx_extra_pack.tip.tip_10": "反物质脾建议搭配灵魂鹫羽毛食用",
@@ -525,8 +547,7 @@
     "mrqx_extra_pack.tooltips.fox_soul.1": "狐仙的真挚祝福",
     "mrqx_extra_pack.tooltips.fox_soul.2": "激活后，攻击回复伤害值5%的饱和度",
     "mrqx_extra_pack.tooltips.fox_soul.3": "§c集齐四魂时，回复量变为5倍§r",
-    "mrqx_extra_pack.tooltips.framework_of_world.1": "“……于世界边境之地，吸纳来自虚空的力量……”",
-    "mrqx_extra_pack.tooltips.framework_of_world.2": "激■后，■入边■的虚空，直到■■■零",
+    "mrqx_extra_pack.tooltips.framework_of_world.1": "§c§l那个深深嵌入Minecraft心脏的未来，你无从知晓。§r",
     "mrqx_extra_pack.tooltips.furious_defense.1": "击碎一切",
     "mrqx_extra_pack.tooltips.furious_defense.2": "攻击时，如果重拳计数器大于10，则消耗所有重拳计数器和§6资源值§r，每消耗1点使伤害+(§f蒸汽计数§r*0.1)%，且此次攻击变为三连击，冷却时间1s",
     "mrqx_extra_pack.tooltips.gate_pearl_craft.1": "如果你在合成表中看到它，使用任意传送门珍珠作为合成材料即可",
@@ -718,6 +739,9 @@
     "mrqx_extra_pack.tooltips.muscle_bone_fracture.8": "如果集齐所有种类的§1深海§r器官，上述加成翻倍",
     "mrqx_extra_pack.tooltips.muscle_paper.1": "可书写：力量、速度、游泳速度、跳跃力、发射",
     "mrqx_extra_pack.tooltips.muscle_paper_written.1": "奇迹般地，存在于纸面上的数据成为了事实",
+    "mrqx_extra_pack.tooltips.my_crown.1": "“疆土回应我的意志，万族呼唤我的尊名”",
+    "mrqx_extra_pack.tooltips.my_crown.2": "§e疆土恩典：作为饰品装备时，如果你处于由你或你的队伍声明的区块中，则使你的攻击力+50%、攻击速度+50%、每秒回复5%最大生命值的生命值§r",
+    "mrqx_extra_pack.tooltips.my_crown.3": "§e万族征召：作为饰品装备时，每个从属于你的生物使你的攻击力+5%，每个不同的生物种类使你的攻击力+50%§r",
     "mrqx_extra_pack.tooltips.mystery_craftsmanship.1": "“工匠精神”",
     "mrqx_extra_pack.tooltips.mystery_disasters.1": "“携灾者”",
     "mrqx_extra_pack.tooltips.mystery_flesh_and_blood.1": "“取自肉体”",
@@ -739,6 +763,12 @@
     "mrqx_extra_pack.tooltips.nightmare_tentacles.3": "同时根据负面效果总等级提升你的扭曲值",
     "mrqx_extra_pack.tooltips.origin_sin.1": "你见证了七大罪恶，并因此负罪……",
     "mrqx_extra_pack.tooltips.origin_sin.2": "同时触发所有七原罪碎片的效果，但不视作集齐全套",
+    "mrqx_extra_pack.tooltips.page_of_future.1": "§e揭示未来： %s / 4§r",
+    "mrqx_extra_pack.tooltips.page_of_future.2": "§e§l未来已被揭示§r",
+    "mrqx_extra_pack.tooltips.page_of_past.1": "§e见证过去： %s / 4§r",
+    "mrqx_extra_pack.tooltips.page_of_past.2": "§e§l过去已被见证§r",
+    "mrqx_extra_pack.tooltips.pages.0": "§8模糊不清§r",
+    "mrqx_extra_pack.tooltips.pages.1": "§c§l绝对禁忌的力量，只能为一人所用。§r",
     "mrqx_extra_pack.tooltips.pancreas_group_hunting.1": "“谁是猎物？”",
     "mrqx_extra_pack.tooltips.pancreas_group_hunting.2": "激活后，每有一个§1深海§r器官，攻击力+10%",
     "mrqx_extra_pack.tooltips.pancreas_group_hunting.3": "如果集齐所有种类的§1深海§r器官，上述加成翻倍",
@@ -807,6 +837,9 @@
     "mrqx_extra_pack.tooltips.sages_book.1": "扉页书写着无数的签名，即便他们/她们/它们/衪们从未降临于此……",
     "mrqx_extra_pack.tooltips.sages_book.2": "§e对相超限：装备后，释放法术时，根据当前法力值与已消耗法力值的差值提供超限等级§r",
     "mrqx_extra_pack.tooltips.sages_book.3": "§e逆转回复：装备后，当前法力值小于等于最大法力值的10%时，反转当前法力值与已消耗法力值，冷却时间10s§r",
+    "mrqx_extra_pack.tooltips.save_point.1": "……吾名为，第四天灾",
+    "mrqx_extra_pack.tooltips.save_point.2": "§e存档：手持右键，设置重生点至当前位置§r",
+    "mrqx_extra_pack.tooltips.save_point.3": "§e读档：作为饰品装备时，受到致命伤害时会瞬移至重生点，同时重置部分状态§r",
     "mrqx_extra_pack.tooltips.sculk_brandguider.1": "它引领着幽匿的延伸",
     "mrqx_extra_pack.tooltips.sculk_brandguider.2": "将你脚下及周围的、可被转变为幽匿块的方块转变为幽匿块，每秒触发一次",
     "mrqx_extra_pack.tooltips.sculk_collectors.1": "它吸收着幽匿的养分",
@@ -931,9 +964,8 @@
     "mrqx_extra_pack.tooltips.sundial.1": "天之时",
     "mrqx_extra_pack.tooltips.sundial.2": "白天时，根据时间获得不同增益效果，§6天体§r器官数提供效果等级",
     "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.1": "“全区横着走”",
-    "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.2": "每分钟在你身边召唤十五只带有标记的狼",
-    "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.3": "造成伤害时，每只狼使伤害+(狼数量)，狼受到1点伤害",
-    "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.4": "注意：狼为未驯服状态",
+    "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.2": "每分钟在你身边召唤十五只带有你的标记、已驯服的狼",
+    "mrqx_extra_pack.tooltips.taoist_fifteen_dogs.3": "造成伤害时，每只带有你的标记的狼使伤害+(狼数量 ^ 2)，同时使这些狼受到1点来自你目标的伤害",
     "mrqx_extra_pack.tooltips.thermal_barrier.1": "升温！升温！升温！",
     "mrqx_extra_pack.tooltips.thermal_barrier.2": "反应开始时，将§c核能动力§r的效果等级提升1级，并降低§e20%§r的时长",
     "mrqx_extra_pack.tooltips.thermal_barrier.3": "反应时，根据§c核能动力§r等级持续提升体温",
@@ -947,6 +979,9 @@
     "mrqx_extra_pack.tooltips.timeless_ivy.1": "它缠绕在你……和你的工具上",
     "mrqx_extra_pack.tooltips.timeless_ivy.2": "§e玛娜修复：装备后，持续尝试消耗魔力值修复你双手中及护甲栏中物品的耐久（每50魔力值修复1耐久）§r",
     "mrqx_extra_pack.tooltips.timeless_ivy.3": "§e玛娜强化：装备后，攻击附带(当前魔力值 * 0.005 * 攻击力)的魔法伤害§r",
+    "mrqx_extra_pack.tooltips.timeworn_poetry_strips.1": "“酣然失千山，万物得其灵”",
+    "mrqx_extra_pack.tooltips.timeworn_poetry_strips.2": "§e挑灯问梦：作为饰品装备时，从属于你的生物在攻击时会附带你的攻击力10%的伤害（视作你的攻击）§r",
+    "mrqx_extra_pack.tooltips.timeworn_poetry_strips.3": "§e随付笺咏醉屠苏：作为饰品装备时，从属于你的生物在死亡时为你和其他从属于你的生物回复等于该生物最大生命值的生命值，并对击杀者（若有）造成等同于该生物攻击力450%的魔法伤害§r",
     "mrqx_extra_pack.tooltips.tumor_mutagen.1": "饮用后随机将胸腔中的一个§e无形肿瘤§r转化为§e恶性肿瘤§r",
     "mrqx_extra_pack.tooltips.tumor_mutagen.2": "§e恶性肿瘤§r的数值较原来会有一定提升，但存在副作用",
     "mrqx_extra_pack.tooltips.ultimate_stew.1": "仍待填充，如同你的胃……",
