--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -2,6 +2,8 @@
     "attribute.obscure_api.penetration": "穿甲",
     "effect.mrqx_extra_pack.charged_blade_effect": "充能刀刃",
     "effect.mrqx_extra_pack.demonization_kill": "恶魔化·灭杀",
+    "effect.mrqx_extra_pack.dragon_emperor_brilliant": "龙皇化·辉煌态",
+    "effect.mrqx_extra_pack.dragon_emperor_passion": "龙皇化·激情态",
     "effect.mrqx_extra_pack.ghost_of_dead_soul": "魂灵残影",
     "effect.mrqx_extra_pack.nuclear_power": "核能动力",
     "effect.mrqx_extra_pack.steam_power": "蒸汽动力",
@@ -41,6 +43,7 @@
     "item.mrqx_extra_pack.command_spell_book": "指令魔法书",
     "item.mrqx_extra_pack.command_spell_core": "指令施法核心",
     "item.mrqx_extra_pack.compressed_biscuit": "压缩饼干",
+    "item.mrqx_extra_pack.core_of_dragon_emperor": "龙皇核心",
     "item.mrqx_extra_pack.core_of_knights": "骑士核心",
     "item.mrqx_extra_pack.cpu": "处理器",
     "item.mrqx_extra_pack.craftsmanship_core": "§8工艺奥秘·匠艺核心§r",
@@ -119,6 +122,7 @@
     "item.mrqx_extra_pack.magic_overload_cpu": "魔能过载处理器",
     "item.mrqx_extra_pack.malignant_tumor": "恶性肿瘤",
     "item.mrqx_extra_pack.marenol": "噩梦醇",
+    "item.mrqx_extra_pack.meijiduo": "梅吉多",
     "item.mrqx_extra_pack.meteor_shower_director": "‌流星雨引导仪",
     "item.mrqx_extra_pack.mini_end_crystal": "迷你末地水晶",
     "item.mrqx_extra_pack.mint_milk_tea": "薄荷奶茶",
@@ -174,6 +178,7 @@
     "item.mrqx_extra_pack.rose_language_cpu": "玫瑰“花语”处理器",
     "item.mrqx_extra_pack.rose_second_bloom_cpu": "玫瑰“再度绽放”处理器",
     "item.mrqx_extra_pack.sages_book": "§b魔法奥秘·贤者宝典§r",
+    "item.mrqx_extra_pack.sakuya_ice_cream": "Sakuya的冰淇淋",
     "item.mrqx_extra_pack.save_point": "§5灾难奥秘·存档点§r",
     "item.mrqx_extra_pack.sculk_brandguider": "幽匿引痕体",
     "item.mrqx_extra_pack.sculk_collectors": "幽匿集养体",
@@ -496,6 +501,12 @@
     "mrqx_extra_pack.tooltips.command_spell_core.2": "激活后，法术强度+100%",
     "mrqx_extra_pack.tooltips.compressed_biscuit.1": "这不是毛巾，是压缩饼干，你把它打开，放在肚里，饥饿值变大变高……",
     "mrqx_extra_pack.tooltips.compressed_biscuit.2": "食用食物时，根据胸腔中§6食物§r器官的数量，少量增幅获得的饥饿值、饱和度",
+    "mrqx_extra_pack.tooltips.core_of_dragon_emperor.1": "以不朽的龙之力而降临于这一方天地，祂的伟力不可观测",
+    "mrqx_extra_pack.tooltips.core_of_dragon_emperor.2": "§e杰出赞助者：天瘟§r",
+    "mrqx_extra_pack.tooltips.core_of_dragon_emperor.3": "按下主动技能按键，根据当前资源值获取不同种类的§e龙皇化§r效果，持续时间为(§c玫瑰§r器官数 × 30 + §d龙§r器官数 × 30)秒，冷却时间360秒",
+    "mrqx_extra_pack.tooltips.core_of_dragon_emperor.4": "大于等于50时为§e激情态§r：攻击附带等级正比于§e龙皇化§r时间的§e超限：巫术爆破§r，每个§d龙§r器官提供2%伤害减免",
+    "mrqx_extra_pack.tooltips.core_of_dragon_emperor.5": "小于50时为§e辉煌态§r：攻击使目标攻击伤害-50%（持续时间无限，不可叠加），每个§d龙§r器官提供5%伤害减免",
+    "mrqx_extra_pack.tooltips.core_of_dragon_emperor.6": "激活后，每个§d龙§r器官提供+1§c玫瑰§r器官个数，每个§c玫瑰§r器官提供+5%攻击伤害",
     "mrqx_extra_pack.tooltips.core_of_knights.1": "骑士精神的凝结",
     "mrqx_extra_pack.tooltips.core_of_knights.2": "激活后，胸腔中每有一个§e国王§r器官，自身攻击伤害、最大生命值、盔甲值+10%，并触发一次部分§3骑士§r器官的§3强化§r效果",
     "mrqx_extra_pack.tooltips.cpu.1": "“检测到无效指令，正在使用默认指令：通用计算”",
@@ -690,6 +701,10 @@
     "mrqx_extra_pack.tooltips.marenol.4": "根据自身所拥有的负面效果计算§c噩梦指数§r",
     "mrqx_extra_pack.tooltips.marenol.5": "§c噩梦指数§r=§e所有负面效果等级之和 × 你的扭曲值 × 0.1§r",
     "mrqx_extra_pack.tooltips.mechanical_frenzy.1": "§c请携带一枚下界之星以激活最终BOSS！！！§r",
+    "mrqx_extra_pack.tooltips.meijiduo.1": "每一次的死亡都是最好的新生",
+    "mrqx_extra_pack.tooltips.meijiduo.2": "§e杰出赞助者：梅吉多§r",
+    "mrqx_extra_pack.tooltips.meijiduo.3": "玩家每一次受到致命伤害都会使本器官的一个随机器官数值+0.5（冰点为-0.5）",
+    "mrqx_extra_pack.tooltips.meijiduo.4": "按下主动技能按键，如果本器官所有数值均大于等于10（冰点小于等于-10），则使所有数值-10（冰点+10），然后使物品栏中所有附魔书的所有附魔等级+1",
     "mrqx_extra_pack.tooltips.meteor_shower_director.1": "星雨来了",
     "mrqx_extra_pack.tooltips.meteor_shower_director.2": "‌按下主动技能按键，消耗所有法力值施放§6超限：星海落瀑§r，根据消耗的法力值、§6天体§r器官个数和§7算力§r提供额外超限等级",
     "mrqx_extra_pack.tooltips.meteor_shower_director.3": "如果玩家在暮色森林中，则再额外提升50%的超限等级",
@@ -837,6 +852,9 @@
     "mrqx_extra_pack.tooltips.sages_book.1": "扉页书写着无数的签名，即便他们/她们/它们/衪们从未降临于此……",
     "mrqx_extra_pack.tooltips.sages_book.2": "§e对相超限：装备后，释放法术时，根据当前法力值与已消耗法力值的差值提供超限等级§r",
     "mrqx_extra_pack.tooltips.sages_book.3": "§e逆转回复：装备后，当前法力值小于等于最大法力值的10%时，反转当前法力值与已消耗法力值，冷却时间10s§r",
+    "mrqx_extra_pack.tooltips.sakuya_ice_cream.1": "看起来……味道不错？",
+    "mrqx_extra_pack.tooltips.sakuya_ice_cream.2": "§b杰出贡献者：SakuyaKnight§r",
+    "mrqx_extra_pack.tooltips.sakuya_ice_cream.3": "食用后，触发一次§3反物质心脏§r的激活效果",
     "mrqx_extra_pack.tooltips.save_point.1": "……吾名为，第四天灾",
     "mrqx_extra_pack.tooltips.save_point.2": "§e存档：手持右键，设置重生点至当前位置§r",
     "mrqx_extra_pack.tooltips.save_point.3": "§e读档：作为饰品装备时，受到致命伤害时会瞬移至重生点，同时重置部分状态§r",
@@ -1010,6 +1028,7 @@
     "mrqx_extra_pack.tooltips.withered_nether_star_shard.2": "造成伤害时，额外造成(伤害值 × 胸腔凋零化数值)的§0凋亡损伤§r",
     "mrqx_extra_pack.tooltips.worn_out_steam_engine.1": "……修一修没准还能用",
     "mrqx_extra_pack.tooltips.xiao_amburm.1": "补药吃窝！",
+    "mrqx_extra_pack.tooltips.xiao_amburm.2": "§e杰出赞助者：XiaoTin·Amburm§r",
     "spell.mrqx_extra_pack.earth_without_earth": "悬根定松图",
     "tetra.improvement.mrqx_craftsmanship_core_final_tactics.description": "让他们有来无回",
     "tetra.improvement.mrqx_craftsmanship_core_final_tactics.name": "§8战术的终结§r",
